Initial work on first 13 chapters.

--- a/projects/configuration-options/secret-messages/01-encoded-outputs/tsconfig.json
+++ b/projects/configuration-options/secret-messages/01-encoded-outputs/tsconfig.json
@@ -1,4 +1,9 @@
 {
-	// Write your configuration options here! ✨
-	"include": ["."]
+	"include": ["."],
+	"exclude": ["*.verify.ts"],
+	"compilerOptions": {
+		"sourceMap": true,
+		"declaration": true,
+		"declarationMap": true
+	}
 }
